# Oka-sock-it-to-me

./: CHANGELOG.md  flake.nix  hie.yaml  oka-sock-it-to-me.cabal
src/: Persistence.hs
