cabal-version:      2.2
name:               oka-sock-it-to-me
version:            0.1.0.0
description:        "Data structures, pure, functional"

-- bug-reports:
-- license:
author:             Jonathan Lorimer
maintainer:         jonathan_lorimer@mac.com

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

executable oka-sock-it-to-me
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:    base >=4.14

  -- hs-source-dirs:
  default-language: Haskell2010

library
  -- other-modules:
  -- other-extensions:
  exposed-modules:  Persistence
  build-depends:    base >=4.14
  hs-source-dirs:   src
  default-language: Haskell2010
